[package]
name = "sinsemilla"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "Ying Tong Lai",
]
edition = "2021"
rust-version = "1.60"
description = "A collision-resistant circuit-efficient hash function"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/sinsemilla"
categories = ["cryptography"]

[dependencies]
